# signal_plotter

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pywheels.yaml
signal_plotter/: __init__.py  csv_parser.py  log.py  plot_window.py  plot_window_tree.py
signal_plotter/Qt/: README.md
tests/: test_dotdict.py
